Completion of the gallery project

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ body {
 }
 
 .header input:focus {
+    display: ltr;
     box-shadow: 0 0 2px 1px #81ecec;
     transition: 0.2s step-end;
     -o-transition: 0.2s step-end;
@@ -40,4 +41,25 @@ body {
 
 .header button:hover {
     background-color: #e84393;
+}
+
+.gallery ul li {
+    height: 360px;
+    padding: 5px;
+    overflow: hidden;
+}
+
+.gallery ul li img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.alert {
+    text-align: center;
+}
+
+.alert small {
+    font-size: 10px;
 }
